Fixed issue with last div in tree overlapping with footer by adding a padding to the body and making the foot a fixed height. Added media quary for reponsive design. Created contact page.

--- a/Resume Website/Stylings/About_Styling.css
+++ b/Resume Website/Stylings/About_Styling.css
@@ -48,6 +48,7 @@
 
 #resume-btn{
 	color: black;
+	text-decoration: none;
 	transition:0.3s;
 }
 
